--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
           </h2>
           <div class="summary">
             <p>
-              Hi! My name is Juan, I'm a Spanish Software Engineer. I'm currently
-              working as Software Engineer at Datadog in Madrid, Spain.
+              Hi! My name is Juan, I'm a Spanish Software Engineer. I'm
+              currently working as Software Engineer at Datadog in Madrid,
+              Spain.
             </p>
           </div>
           <!--//summary-->
@@ -143,7 +144,7 @@
             </div>
             <!--//meta-->
             <div class="details">
-              <p>Node.js, React, GraphQL, Jest, Cypress, Python.</p>
+              <p>Node.js, React.</p>
             </div>
             <!--//details-->
           </div>
@@ -175,9 +176,7 @@
             <!--//meta-->
             <div class="details">
               <p>Frontend: React, Redux, Apollo.</p>
-              <p>
-                Backend: Python, Django, Graphene (GraphQL), PostgreSQL.
-              </p>
+              <p>Backend: Python, Django, Graphene (GraphQL), PostgreSQL.</p>
             </div>
             <!--//details-->
           </div>
@@ -197,9 +196,7 @@
                 Full administration, maintenance and development of the Web
                 platform.
               </p>
-              <p>
-                Django, Wagtail, React, HTML, CSS, AWS.
-              </p>
+              <p>Django, Wagtail, React, HTML, CSS, AWS.</p>
             </div>
             <!--//details-->
           </div>
@@ -220,9 +217,7 @@
                 Development of complete online assessment solutions based on web
                 technologies.
               </p>
-              <p>
-                Nodejs, PHP, React, HTML, CSS.
-              </p>
+              <p>Nodejs, PHP, React, HTML, CSS.</p>
             </div>
             <!--//details-->
           </div>
@@ -242,9 +237,7 @@
               <p>
                 Development of a new version for the HOB VPN Client - Gateway.
               </p>
-              <p>
-                C, C++.
-              </p>
+              <p>C, C++.</p>
             </div>
             <!--//details-->
           </div>
@@ -265,9 +258,7 @@
                 Applications and Technologies Division. Software receivers for
                 GNSS.
               </p>
-              <p>
-                C, C++ and Matlab.
-              </p>
+              <p>C, C++ and Matlab.</p>
             </div>
             <!--//details-->
           </div>
@@ -288,9 +279,7 @@
                 Electromagnetic characterization of elliptical waveguides,
                 following the work done in my Master Thesis.
               </p>
-              <p>
-                MATLAB
-              </p>
+              <p>MATLAB</p>
             </div>
             <!--//details-->
           </div>
@@ -322,17 +311,22 @@
         <section class="section projects-section">
           <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
           <div class="intro">
-            <p>
-              Here are some of the projects in which I took part.
-            </p>
+            <p>Here are some of the projects I've been involved in.</p>
+          </div>
+          <div class="item">
+            <span class="project-title"
+              ><a href="https://github.com/datadog/dd-trace-js" target="_blank"
+                >Contributor in Datadog APM tracing client for JavaScript</a
+              ></span
+            >
+            -
+            <span class="project-tagline">Technologies used: Node.js</span>
           </div>
           <!--//intro-->
           <div class="item">
-            <span class="project-title"
-              ><a href="" target="_blank"
-                >Developer of mobile app for internal communication in Cruz Roja
-                Española</a
-              ></span
+            <span class="project-title">
+              Developer of mobile app for internal communication in Cruz Roja
+              Española</span
             >
             -
             <span class="project-tagline"
@@ -356,9 +350,7 @@
           <!--//item-->
           <div class="item">
             <span class="project-title"
-              ><a href="" target="_blank"
-                >Developer of internal user management tool for FAZUA GmbH</a
-              ></span
+              >Developer of internal user management tool for FAZUA GmbH</span
             >
             -
             <span class="project-tagline"
@@ -367,12 +359,10 @@
           </div>
           <!--//item-->
           <div class="item">
-            <span class="project-title"
-              ><a href="" target="_blank"
-                >Developer of manufacturing execution system (MES) for
-                production line in FAZUA GmbH</a
-              ></span
-            >
+            <span class="project-title">
+              >Developer of manufacturing execution system (MES) for production
+              line in FAZUA GmbH
+            </span>
             -
             <span class="project-tagline"
               >Technologies used: Django, React, Redux, Javascript, HTML, CSS.
@@ -380,9 +370,7 @@
           </div>
           <!--//item-->
           <div class="item">
-            <span class="project-title"
-              ><a href="" target="_blank">Creator of RESTful API</a></span
-            >
+            <span class="project-title">Creator of RESTful API</span>
             -
             <span class="project-tagline"
               >RESTful API for alpha-test.de. Technologies used: Swagger
@@ -391,11 +379,9 @@
           </div>
           <!--//item-->
           <div class="item">
-            <span class="project-title"
-              ><a href="" target="_blank"
-                >Creator of Project Management tool</a
-              ></span
-            >
+            <span class="project-title">
+              Creator of Project Management tool
+            </span>
             -
             <span class="project-tagline"
               >Internal project management tool for alpha-test.de. Technologies
@@ -415,21 +401,6 @@
               <a src="https://bewerbung.com/selbsttests">bewerbung.com</a>.
               Technologies used: Javascript, HTML5, CSS3, PHP, MySQL, SOAP.
               Outcomes: already more than <strong>450000</strong> runs.</span
-            >
-          </div>
-          <!--//item-->
-
-          <div class="item">
-            <span class="project-title"
-              ><a href="http://hob.de/" target="_blank"
-                >Project Engineer in VPN department.</a
-              ></span
-            >
-            -
-            <span class="project-tagline"
-              >Development of VPN client and gateway update to IKEv2.
-              Technologies used: C, C++. Outcomes: further development of the
-              tools.</span
             >
           </div>
           <!--//item-->
@@ -479,15 +450,6 @@
               </div>
               <!--//level-bar-->
             </div>
-            <!--//item-->
-            <div class="item">
-              <h3 class="level-title">Django &amp; Python</h3>
-              <div class="level-bar">
-                <div class="level-bar-inner" data-level="70%"></div>
-              </div>
-              <!--//level-bar-->
-            </div>
-            <!--//item-->
             <div class="item">
               <h3 class="level-title">React Native</h3>
               <div class="level-bar">
