--- a/index.html
+++ b/index.html
@@ -50,43 +50,18 @@
         <div class="contact-container container-block">
           <ul class="list-unstyled contact-list">
             <li class="email">
-              <i class="far fa-envelope"></i
-              ><a href="mailto: fernandez.alba.juan@gmail.com">
-                fernandez.alba.juan@gmail.com</a
-              >
+              <i class="far fa-envelope"></i>
+              <a href="mailto: fernandez.alba.juan@gmail.com">fernandez.alba.juan@gmail.com</a>
             </li>
             <li class="linkedin">
-              <i class="fab fa-linkedin"></i
-              ><a
+              <i class="fab fa-linkedin"></i>
+              <a
                 href="http://www.linkedin.com/in/juan-fernandez"
-                target="_blank"
-              >
-                linkedin.com/in/juan-fernandez</a
-              >
+                target="_blank">linkedin.com/in/juan-fernandez</a>
             </li>
             <li class="github">
-              <i class="fab fa-github"></i
-              ><a href="https://github.com/juan-fernandez" target="_blank">
-                github.com/juan-fernandez</a
-              >
-            </li>
-            <li class="angellist">
-              <i class="fab fa-angellist"></i
-              ><a
-                href="https://angel.co/juan-antonio-fernandez-de-alba"
-                target="_blank"
-              >
-                angel.co/juan-antonio-fernandez-de-alba</a
-              >
-            </li>
-            <li class="pdf">
-              <i class="far fa-file-pdf"></i
-              ><a
-                href="assets\Juan_Fernandez_de_Alba_CV_November_2018.pdf"
-                target="_blank"
-              >
-                CV PDF version</a
-              >
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/juan-fernandez" target="_blank">github.com/juan-fernandez</a>
             </li>
           </ul>
         </div>
@@ -120,9 +95,7 @@
           </h2>
           <div class="summary">
             <p>
-              Hi! My name is Juan, I'm a Spanish Software Engineer. I'm
-              currently working as Software Engineer at Datadog in Madrid,
-              Spain.
+              Hello! I'm Juan, a software engineer from Spain. I absolutely love what I do and always bring enthusiasm to my work. Right now, I'm a Senior Software Engineer at Datadog, based in Madrid.
             </p>
           </div>
           <!--//summary-->
@@ -136,8 +109,23 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
+                <h3 class="job-title">Senior Software Engineer</h3>
+                <div class="time">June 2023 - Present</div>
+              </div>
+              <!--//upper-row-->
+              <div class="company">Datadog</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+              <p>Node.js.</p>
+            </div>
+            <!--//details-->
+          </div>
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
                 <h3 class="job-title">Software Engineer</h3>
-                <div class="time">June 2020 - Present</div>
+                <div class="time">June 2020 - June 2023</div>
               </div>
               <!--//upper-row-->
               <div class="company">Datadog</div>
@@ -279,7 +267,7 @@
                 Electromagnetic characterization of elliptical waveguides,
                 following the work done in my Master Thesis.
               </p>
-              <p>MATLAB</p>
+              <p>Matlab.</p>
             </div>
             <!--//details-->
           </div>
@@ -310,125 +298,41 @@
 
         <section class="section projects-section">
           <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
-          <div class="intro">
-            <p>Here are some of the projects I've been involved in.</p>
-          </div>
           <div class="item">
             <span class="project-title"
-              ><a href="https://github.com/datadog/dd-trace-js" target="_blank"
-                >Contributor in Datadog APM tracing client for JavaScript</a
+              ><a href="https://docs.datadoghq.com/tests/setup/javascript/" target="_blank"
+                >Datadog's Test visibility for Javascript</a
               ></span
             >
             -
             <span class="project-tagline">Technologies used: Node.js</span>
           </div>
-          <!--//intro-->
-          <div class="item">
-            <span class="project-title">
-              Developer of mobile app for internal communication in Cruz Roja
-              Española</span
-            >
-            -
-            <span class="project-tagline"
-              >Technologies used: React Native. Publication both in Google Play
-              Store and Apple Store.</span
-            >
-          </div>
-          <!--//item-->
           <div class="item">
             <span class="project-title"
-              ><a href="https://fazua.com" target="_blank"
-                >Developer of fazua.com</a
+              ><a href="https://docs.datadoghq.com/intelligent_test_runner/setup/javascript/" target="_blank"
+                >Datadog's Intelligent Test Runner for Javascript</a
               ></span
             >
             -
-            <span class="project-tagline"
-              >Technologies and services used: AWS, Nginx, Django, Wagtail,
-              React, Javascript, HTML, CSS.
-            </span>
+            <span class="project-tagline">Technologies used: Node.js</span>
           </div>
-          <!--//item-->
           <div class="item">
             <span class="project-title"
-              >Developer of internal user management tool for FAZUA GmbH</span
-            >
-            -
-            <span class="project-tagline"
-              >Technologies used: Django, React, Redux, Javascript, HTML, CSS.
-            </span>
-          </div>
-          <!--//item-->
-          <div class="item">
-            <span class="project-title">
-              >Developer of manufacturing execution system (MES) for production
-              line in FAZUA GmbH
-            </span>
-            -
-            <span class="project-tagline"
-              >Technologies used: Django, React, Redux, Javascript, HTML, CSS.
-            </span>
-          </div>
-          <!--//item-->
-          <div class="item">
-            <span class="project-title">Creator of RESTful API</span>
-            -
-            <span class="project-tagline"
-              >RESTful API for alpha-test.de. Technologies used: Swagger
-              (Nodejs), Javascript, PHP, MySQL.</span
-            >
-          </div>
-          <!--//item-->
-          <div class="item">
-            <span class="project-title">
-              Creator of Project Management tool
-            </span>
-            -
-            <span class="project-tagline"
-              >Internal project management tool for alpha-test.de. Technologies
-              used: React, Flux, HTML5, CSS3, Nodejs, PHP, MySQL.
-            </span>
-          </div>
-          <!--//item-->
-          <div class="item">
-            <span class="project-title"
-              ><a href="https://bewerbung.com/selbsttests" target="_blank"
-                >Collaborator of Online assessments</a
+              ><a href="https://github.com/datadog/dd-trace-js" target="_blank"
+                >Contributor to Datadog's library</a
               ></span
             >
             -
-            <span class="project-tagline"
-              >Responsive online self-assessments for XING under
-              <a src="https://bewerbung.com/selbsttests">bewerbung.com</a>.
-              Technologies used: Javascript, HTML5, CSS3, PHP, MySQL, SOAP.
-              Outcomes: already more than <strong>450000</strong> runs.</span
-            >
+            <span class="project-tagline">Technologies used: Node.js</span>
           </div>
-          <!--//item-->
-
-          <div class="item">
-            <span class="project-title"
-              ><a href="http://www.gmv.com/en/" target="_blank"
-                >GNSS Engineer</a
-              ></span
-            >
-            -
-            <span class="project-tagline"
-              >Implementation of software based GNSS receivers. Technologies
-              used: C, C++, MATLAB. Outcomes: 2 successfully completed projects
-              under European Space Agency funding.</span
-            >
-          </div>
-          <!--//item-->
         </section>
-        <!--//section-->
-
         <section class="skills-section section">
           <h2 class="section-title">
             <i class="fa fa-rocket"></i>Skills &amp; Proficiency
           </h2>
           <div class="skillset">
             <div class="item">
-              <h3 class="level-title">Javascript ES6</h3>
+              <h3 class="level-title">Node.js</h3>
               <div class="level-bar">
                 <div class="level-bar-inner" data-level="90%"></div>
               </div>
@@ -450,14 +354,6 @@
               </div>
               <!--//level-bar-->
             </div>
-            <div class="item">
-              <h3 class="level-title">React Native</h3>
-              <div class="level-bar">
-                <div class="level-bar-inner" data-level="60%"></div>
-              </div>
-              <!--//level-bar-->
-            </div>
-            <!--//item-->
           </div>
         </section>
         <!--//skills-section-->
